testsuite/gnatprove/tests/ug__ownership_observing/test.out
 error: object was observed at line 9
--> ownership_observing.adb:13:09
   13 |          X.all := X.all + 1;  --  illegal
      |          ~~^~~

 error: object was observed at line 9
--> ownership_observing.adb:14:09
   14 |          X.all := 1;          --  illegal
      |          ~~^~~
ownership_observing.gpr: error: [Ada Analysis] ownership_observing.adb (ownership_observing.gpr) failed with status 5
gnatprove: error during flow analysis and proof
